[Add] product craft

--- a/OOF-Frontend/src/App.css
+++ b/OOF-Frontend/src/App.css
@@ -3,8 +3,31 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  font-family: cursive;
 }
 
 .app-content {
   flex-grow: 1;
+}
+
+.footer-container {
+  margin-top: 2rem;
+  display: flex;
+  width: 90%;
+  padding-left: 5%;
+  padding-right: 5%;
+  flex-direction: row;
+  background-color: rgb(34,34,34);
+}
+
+.footer-info {
+  flex-grow: 1;
+  width: 25%; 
+  padding: 0.5rem;
+  color: white;
+}
+
+a {
+  text-decoration: none;
+  color: rgb(255, 164, 131);
 }
