--- a/OOF-Frontend/src/views/product/index.css
+++ b/OOF-Frontend/src/views/product/index.css
@@ -16,6 +16,7 @@
   display: flex;
   flex-direction: row;
   flex-grow: 1;
+  height: 20rem;
 }
 
 .product-image:hover {
@@ -29,7 +30,7 @@
 .product-card {
   width: 25%;
   border: 1px solid black;
-  height: 20rem !important;
+  height: 15rem !important;
   margin-left: 0.5rem;
   margin-right: 0.5rem;
   margin-top: 0.5rem;
@@ -40,8 +41,13 @@
 }
 
 .filter {
+  width: 15%;
   margin-top: 1rem;
   display: flex;
   flex-direction: column;
   align-items: start;
+}
+
+.product-name {
+  font-size: 1rem;
 }
