--- a/OOF-Frontend/src/App.css
+++ b/OOF-Frontend/src/App.css
@@ -3,7 +3,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  font-family: cursive;
+  font-family: system-ui;
 }
 
 .app-content {
@@ -30,4 +30,9 @@
 a {
   text-decoration: none;
   color: rgb(255, 164, 131);
+}
+
+.layout {
+  height: 100%;
+  width: 100%;
 }
