--- a/OOF-Frontend/src/views/home/index.css
+++ b/OOF-Frontend/src/views/home/index.css
@@ -9,7 +9,6 @@
 }
 
 .swiper {
-  background-color: #e3f8eb;
   border-radius: 0.3rem;
 }
 
@@ -44,7 +43,8 @@
   font-size: 2rem;
   margin-top: 1rem;
   margin-bottom: 1rem;
-  font-family: cursive;
+  font-family: system-ui;
+  font-weight: bold;
 }
 
 .product-container {
@@ -56,22 +56,25 @@
 }
 
 .swiper-slide-tab {
-  background-color: rgb(196, 245, 208);
+  background-color: coral;
   height: 2rem !important;
   display: flex;
   justify-content: center;
   align-items: center;
   font-size: 1.25rem;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  color: white;
 }
 
 .swiper-slide-tab:hover {
   cursor: pointer;
   opacity: 0.85;
-  color: coral;
+  color: white;
 }
 
 .slide-tab-selected {
-  background-color: rgb(81, 245, 122);
+  background-color: rgb(255, 101, 46);
 }
 
 .categories {
