--- a/OOF-Frontend/src/views/login/index.css
+++ b/OOF-Frontend/src/views/login/index.css
@@ -1,10 +1,11 @@
 .login-container {
   width: 100%;
-  height: 100%;
+  height: 93vh;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-  font-family: cursive;
+  font-family: system-ui;
 }
 
 .login-form {
@@ -21,7 +22,7 @@
 }
 
 .form-head {
-  background-color: #86efac;
+  background-color: #2b2b2b;
   width: 100%;
   flex: 1;
   display: flex;
@@ -65,7 +66,7 @@
 
 .input:focus {
   outline: none;
-  border: 0.1rem solid #86efac;
+  border: 0.1rem solid coral;
 }
 
 .forgot-account-container {
@@ -97,7 +98,7 @@
   width: 70%;
   height: 1.75rem;
   border: 0;
-  background-color: #86efac;
+  background-color: coral;
   border-radius: 1.5rem;
   color: #ffffff;
 }
@@ -107,7 +108,7 @@
 }
 
 .forgot-account {
-  color: #6dc98f;
+  color: coral;
 }
 
 .forgot-account:hover {
@@ -115,7 +116,7 @@
 }
 
 .signup {
-  color: #6dc98f;
+  color: coral;
 }
 
 .signup:hover {
@@ -125,4 +126,14 @@
 .error {
   margin-bottom: 1rem;
   color: red;
+}
+
+.app-name {
+  font-size: 2rem;
+  color: coral;
+  margin-bottom: 1rem;
+}
+
+.footer-container {
+  display: none;
 }
