--- a/OOF-Frontend/src/views/productDetail/index.css
+++ b/OOF-Frontend/src/views/productDetail/index.css
@@ -2,18 +2,18 @@
   width: 100%;
   display: flex;
   flex-direction: column;
+  padding-top: 1rem;
 }
 
 .product-detail {
   margin-left: 5rem;
-  width: 100%;
   display: flex;
   flex-direction: row;
 }
 
 .product-image {
-  width: 10rem;
-  min-height: 10rem;
+  width: 15rem;
+  height: 15rem;
 }
 
 .detail {
@@ -88,4 +88,18 @@
   display: flex;
   justify-content: center;
   font-size: 3rem;
+}
+
+.product-detail-info {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  justify-content: center;
+}
+
+.discount {
+  flex-grow: 1;
+  margin-left: 5rem;
+  margin-right: 5rem;
+  border: 1px dotted coral;
 }
