--- a/OOF-Frontend/src/views/order/index.css
+++ b/OOF-Frontend/src/views/order/index.css
@@ -12,8 +12,8 @@
 }
 
 .order-image {
-  width: 5rem;
-  height: 5rem;
+  width: 10rem;
+  height: 15rem;
   margin-left: 0.2rem;
 }
 
@@ -37,6 +37,10 @@
 .order-detail {
   flex-grow: 1;
   margin-left: 2rem;
+}
+
+.order-detail div {
+  margin-top: 1rem;
 }
 
 .order-category-name {
